--- a/PDFParser/PDFParser.vcxproj.filters
+++ b/PDFParser/PDFParser.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="pdfparser\document_parser">
       <UniqueIdentifier>{469ca825-74ae-4d07-917a-534d8c1cde23}</UniqueIdentifier>
     </Filter>
+    <Filter Include="pdfparser\document_parser\data_types">
+      <UniqueIdentifier>{46e52900-f46c-468a-9d5f-1f6442400337}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h">
@@ -92,6 +95,12 @@
     </ClInclude>
     <ClInclude Include="pdfparser.object_not_found_error.hpp">
       <Filter>pdfparser\stream_parser</Filter>
+    </ClInclude>
+    <ClInclude Include="pdfparser.PDFPage.hpp">
+      <Filter>pdfparser\document_parser</Filter>
+    </ClInclude>
+    <ClInclude Include="pdfparser.data_types.hpp">
+      <Filter>pdfparser\document_parser\data_types</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
