--- a/PDFParser/PDFParser.vcxproj.filters
+++ b/PDFParser/PDFParser.vcxproj.filters
@@ -49,6 +49,9 @@
     <Filter Include="pdfparser\document_parser\data_types">
       <UniqueIdentifier>{46e52900-f46c-468a-9d5f-1f6442400337}</UniqueIdentifier>
     </Filter>
+    <Filter Include="PDFParser %28.NET%29">
+      <UniqueIdentifier>{f07dab9f-cea9-41be-9cd8-016b93b2fb73}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h">
@@ -96,9 +99,6 @@
     <ClInclude Include="pdfparser.object_not_found_error.hpp">
       <Filter>pdfparser\stream_parser</Filter>
     </ClInclude>
-    <ClInclude Include="pdfparser.PDFPage.hpp">
-      <Filter>pdfparser\document_parser</Filter>
-    </ClInclude>
     <ClInclude Include="pdfparser.data_types.hpp">
       <Filter>pdfparser\document_parser\data_types</Filter>
     </ClInclude>
@@ -107,6 +107,12 @@
     </ClInclude>
     <ClInclude Include="type_traits_extended.hpp">
       <Filter>pdfparser</Filter>
+    </ClInclude>
+    <ClInclude Include="PDFParser.PagesModel.hpp">
+      <Filter>PDFParser %28.NET%29</Filter>
+    </ClInclude>
+    <ClInclude Include="PDFParser.PDFPage.hpp">
+      <Filter>PDFParser %28.NET%29</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +145,9 @@
     </ClCompile>
     <ClCompile Include="pdfparser.data_types.cpp">
       <Filter>pdfparser\document_parser\data_types</Filter>
+    </ClCompile>
+    <ClCompile Include="PDFParser.PagesModel.cpp">
+      <Filter>PDFParser %28.NET%29</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
