--- a/PDFReaderModel/PDFReaderModel.fsproj
+++ b/PDFReaderModel/PDFReaderModel.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="MainWindowViewModel.fs" />
+    <Compile Include="PagesViewModel.fs" />
   </ItemGroup>
 
   <ItemGroup>
