--- a/PDFParser/PDFParser.vcxproj.filters
+++ b/PDFParser/PDFParser.vcxproj.filters
@@ -16,41 +16,41 @@
     <Filter Include="pdfparser">
       <UniqueIdentifier>{ef5eb83f-ffd9-45c1-a9c6-948d97526de4}</UniqueIdentifier>
     </Filter>
-    <Filter Include="pdfparser\object_pool">
-      <UniqueIdentifier>{43153da4-ade5-4025-a85e-9fab6e828253}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\object_types">
-      <UniqueIdentifier>{f13b5421-662f-4180-af25-5dc3776b75a2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\stream_parser">
-      <UniqueIdentifier>{ed7b18f4-4990-41d6-ae62-ba883c209bbb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\xref_types">
-      <UniqueIdentifier>{ec799d21-d17c-46df-8147-d7b17be513c2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\istream_extended">
-      <UniqueIdentifier>{d495e982-6f00-4d6d-874c-acc91d14793f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\whitespace_flags">
-      <UniqueIdentifier>{94480dce-d7a4-4dfd-a0c6-37acacb08de7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\character_types">
-      <UniqueIdentifier>{3a1e4010-4cc7-4e6c-8d15-f7b655387d5e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\tokenizer">
-      <UniqueIdentifier>{980e1a15-2f06-4ebe-bf21-5c673b03abd5}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\pdftoken">
-      <UniqueIdentifier>{2a6b0465-8233-4804-9579-a9203e9a9fda}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\document_parser">
-      <UniqueIdentifier>{469ca825-74ae-4d07-917a-534d8c1cde23}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="pdfparser\document_parser\data_types">
-      <UniqueIdentifier>{46e52900-f46c-468a-9d5f-1f6442400337}</UniqueIdentifier>
-    </Filter>
     <Filter Include="PDFParser %28.NET%29">
       <UniqueIdentifier>{f07dab9f-cea9-41be-9cd8-016b93b2fb73}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader">
+      <UniqueIdentifier>{05357ed6-e3e3-40ab-b74f-cefed1657c20}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\object_pool">
+      <UniqueIdentifier>{43153da4-ade5-4025-a85e-9fab6e828253}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\data_types">
+      <UniqueIdentifier>{46e52900-f46c-468a-9d5f-1f6442400337}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\document_parser">
+      <UniqueIdentifier>{ed7b18f4-4990-41d6-ae62-ba883c209bbb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\document_parser\object_types">
+      <UniqueIdentifier>{f13b5421-662f-4180-af25-5dc3776b75a2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\document_parser\tokenizer">
+      <UniqueIdentifier>{980e1a15-2f06-4ebe-bf21-5c673b03abd5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\document_parser\tokenizer\pdftoken">
+      <UniqueIdentifier>{2a6b0465-8233-4804-9579-a9203e9a9fda}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\document_parser\tokenizer\istream_extended">
+      <UniqueIdentifier>{d495e982-6f00-4d6d-874c-acc91d14793f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\document_parser\tokenizer\istream_extended\whitespace_flags">
+      <UniqueIdentifier>{94480dce-d7a4-4dfd-a0c6-37acacb08de7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\document_parser\tokenizer\character_types">
+      <UniqueIdentifier>{3a1e4010-4cc7-4e6c-8d15-f7b655387d5e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\document_reader\document_parser\xref_types">
+      <UniqueIdentifier>{ec799d21-d17c-46df-8147-d7b17be513c2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -58,52 +58,46 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.object_pool.hpp">
-      <Filter>pdfparser\object_pool</Filter>
+      <Filter>pdfparser\document_reader\object_pool</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.object_types.hpp">
-      <Filter>pdfparser\object_types</Filter>
-    </ClInclude>
-    <ClInclude Include="pdfparser.document_parser.hpp">
-      <Filter>pdfparser\document_parser</Filter>
+      <Filter>pdfparser\document_reader\document_parser\object_types</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.stream_parser.hpp">
-      <Filter>pdfparser\stream_parser</Filter>
+      <Filter>pdfparser\document_reader\document_parser</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.xref_types.hpp">
-      <Filter>pdfparser\xref_types</Filter>
+      <Filter>pdfparser\document_reader\document_parser\xref_types</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.istream_extended.hpp">
-      <Filter>pdfparser\istream_extended</Filter>
+      <Filter>pdfparser\document_reader\document_parser\tokenizer\istream_extended</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.istream_extended_error.hpp">
-      <Filter>pdfparser\istream_extended</Filter>
+      <Filter>pdfparser\document_reader\document_parser\tokenizer\istream_extended</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.whitespace_flags.hpp">
-      <Filter>pdfparser\whitespace_flags</Filter>
+      <Filter>pdfparser\document_reader\document_parser\tokenizer\istream_extended\whitespace_flags</Filter>
     </ClInclude>
     <ClInclude Include="character_types.hpp">
-      <Filter>pdfparser\character_types</Filter>
+      <Filter>pdfparser\document_reader\document_parser\tokenizer\character_types</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.tokenizer.hpp">
-      <Filter>pdfparser\tokenizer</Filter>
+      <Filter>pdfparser\document_reader\document_parser\tokenizer</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.tokenize_error.hpp">
-      <Filter>pdfparser\tokenizer</Filter>
+      <Filter>pdfparser\document_reader\document_parser\tokenizer</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.pdftoken.hpp">
-      <Filter>pdfparser\pdftoken</Filter>
+      <Filter>pdfparser\document_reader\document_parser\tokenizer\pdftoken</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.parse_error.hpp">
-      <Filter>pdfparser\stream_parser</Filter>
+      <Filter>pdfparser\document_reader\document_parser</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.object_not_found_error.hpp">
-      <Filter>pdfparser\stream_parser</Filter>
+      <Filter>pdfparser\document_reader\document_parser</Filter>
     </ClInclude>
     <ClInclude Include="pdfparser.data_types.hpp">
-      <Filter>pdfparser\document_parser\data_types</Filter>
-    </ClInclude>
-    <ClInclude Include="pdfparser.document_error.hpp">
-      <Filter>pdfparser\document_parser</Filter>
+      <Filter>pdfparser\data_types</Filter>
     </ClInclude>
     <ClInclude Include="type_traits_extended.hpp">
       <Filter>pdfparser</Filter>
@@ -114,40 +108,46 @@
     <ClInclude Include="PDFParser.PDFPage.hpp">
       <Filter>PDFParser %28.NET%29</Filter>
     </ClInclude>
+    <ClInclude Include="pdfparser.document_parser.hpp">
+      <Filter>pdfparser\document_reader</Filter>
+    </ClInclude>
+    <ClInclude Include="pdfparser.document_error.hpp">
+      <Filter>pdfparser\document_reader</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.object_types.cpp">
-      <Filter>pdfparser\object_types</Filter>
-    </ClCompile>
-    <ClCompile Include="pdfparser.document_parser.cpp">
-      <Filter>pdfparser\document_parser</Filter>
+      <Filter>pdfparser\document_reader\document_parser\object_types</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.xref_types.cpp">
-      <Filter>pdfparser\xref_types</Filter>
+      <Filter>pdfparser\document_reader\document_parser\xref_types</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.istream_extended_error.cpp">
-      <Filter>pdfparser\istream_extended</Filter>
+      <Filter>pdfparser\document_reader\document_parser\tokenizer\istream_extended</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.tokenize_error.cpp">
-      <Filter>pdfparser\tokenizer</Filter>
+      <Filter>pdfparser\document_reader\document_parser\tokenizer</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.pdftoken.cpp">
-      <Filter>pdfparser\pdftoken</Filter>
+      <Filter>pdfparser\document_reader\document_parser\tokenizer\pdftoken</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.parse_error.cpp">
-      <Filter>pdfparser\stream_parser</Filter>
+      <Filter>pdfparser\document_reader\document_parser</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.object_not_found_error.cpp">
-      <Filter>pdfparser\stream_parser</Filter>
+      <Filter>pdfparser\document_reader\document_parser</Filter>
     </ClCompile>
     <ClCompile Include="pdfparser.data_types.cpp">
-      <Filter>pdfparser\document_parser\data_types</Filter>
+      <Filter>pdfparser\data_types</Filter>
     </ClCompile>
     <ClCompile Include="PDFParser.PagesModel.cpp">
       <Filter>PDFParser %28.NET%29</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.document_parser.cpp">
+      <Filter>pdfparser\document_reader</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
