--- a/PDFParser/PDFParser.vcxproj
+++ b/PDFParser/PDFParser.vcxproj
@@ -138,12 +138,12 @@
     <ClInclude Include="pdfparser.object_pool.hpp" />
     <ClInclude Include="pdfparser.parse_error.hpp" />
     <ClInclude Include="pdfparser.object_types.hpp" />
-    <ClInclude Include="pdfparser.document_parser.hpp" />
+    <ClInclude Include="pdfparser.document_reader.hpp" />
     <ClInclude Include="PDFParser.PDFPage.hpp" />
     <ClInclude Include="pdfparser.xref_types.hpp" />
     <ClInclude Include="pdfparser.pdftoken.hpp" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="pdfparser.stream_parser.hpp" />
+    <ClInclude Include="pdfparser.document_parser.hpp" />
     <ClInclude Include="pdfparser.whitespace_flags.hpp" />
     <ClInclude Include="pdfparser.tokenizer.hpp" />
     <ClInclude Include="pdfparser.tokenize_error.hpp" />
@@ -155,7 +155,7 @@
     <ClCompile Include="PDFParser.PagesModel.cpp" />
     <ClCompile Include="pdfparser.parse_error.cpp" />
     <ClCompile Include="pdfparser.istream_extended_error.cpp" />
-    <ClCompile Include="pdfparser.document_parser.cpp" />
+    <ClCompile Include="pdfparser.document_reader.cpp" />
     <ClCompile Include="pdfparser.pdftoken.cpp" />
     <ClCompile Include="pdfparser.xref_types.cpp" />
     <ClCompile Include="pdfparser.tokenize_error.cpp" />
