--- a/PDFReader/PDFReader.csproj
+++ b/PDFReader/PDFReader.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PDFReaderModel\PDFReaderModel.fsproj" />
+    <ProjectReference Include="..\PDFReaderViewModel\PDFReaderViewModel.fsproj" />
   </ItemGroup>
 
 </Project>
