--- a/PDFReaderViewModel/PDFReaderViewModel.fsproj
+++ b/PDFReaderViewModel/PDFReaderViewModel.fsproj
@@ -5,6 +5,10 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="PagesViewModel.fs" />
   </ItemGroup>
